[package]
authors = [
    "Jonathan Klimt <jonathan.klimt@rwth-aachen.de>"
]
description = "Support for x86_64 specific instructions, registers, and structures."
documentation = "https://docs.rs/memory_addresses"
keywords = ["amd64", "x86", "x86_64", "no_std"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
name = "memory_addresses"
readme = "README.md"
repository = "https://github.com/rust-osdev/memory_addresses"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.3"
# TODO: put this behind a feature flag
x86_64 = { version = "0.15.1", default-features = false }

[features]
default = ["instructions"]
instructions = []
step_trait = []
