[package]
authors = ["Jonathan Klimt <jonathan.klimt@rwth-aachen.de>"]
description = "Unified virtual and physical address types for the Hermit ecosystem and beyond"
documentation = "https://docs.rs/memory_addresses"
keywords = ["amd64", "x86", "x86_64", "aarch64", "no_std"]
categories = ["no-std", "os", "no-alloc"]
license = "MIT/Apache-2.0"
name = "memory_addresses"
readme = "README.md"
repository = "https://github.com/hermit-os/memory-addresses"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
num = { version = "0.4.3", default-features =  false }
x86 = { version = "0.52.0", default-features = false, optional = true }
x86_64 = { version = "0.15.1", default-features = false, optional = true }

[features]
default = ["x86_64", "aarch64"]
step_trait = []
x86_64 = ["dep:x86_64"]
aarch64 = []
conversions = ["conv-x86", "conv-x86_64"]
conv-x86 = ["dep:x86"]
conv-x86_64 = ["dep:x86_64"]
